--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bignumber.js": "^9.1.2",
     "jotai": "^2.9.0",
     "konva": "^9.3.14",
     "next": "14.2.5",
